# git_manager

./: CMakeLists.txt  config.ini  git.cpp  git.h  git_manager.cpp  git_manager.h  git_manager.qrc  git_manager.sln  git_manager.ui  git_manager.vcxproj  git_manager.vcxproj.filters  github_client.cpp  github_client.h  local_repos_info.cpp  local_repos_info.h  local_repos_info.ui  login.cpp  login.h  login.ui  main.cpp  module.h  persistence.cpp  persistence.h  repo_item.cpp  repo_item.h  repo_item.ui
include/: error_mess.h  git.h  git_client.h  git_manager.h  git_manager.ui  gitee_client.h  github_client.h  local_repos_info.h  local_repos_info.ui  logger.h  login.h  login.ui  persistence.h  repo_item.h  repo_item.ui
src/: git.cpp  git_client.cpp  git_manager.cpp  gitee_client.cpp  github_client.cpp  local_repos_info.cpp  logger.cpp  login.cpp  main.cpp  persistence.cpp  repo_item.cpp
